--- a/julia/04 - JavaScript to update a Node.ipynb
+++ b/julia/04 - JavaScript to update a Node.ipynb
@@ -63,7 +63,10 @@
     }
    ],
    "source": [
-    "display(\"text/html\", \"\"\"<p id=\"$(displayid)\" style=\"background-color:red; color:white; padding: 5px;\">nothing here</p>\"\"\")"
+    "display(\n",
+    "    \"text/html\", \n",
+    "    \"\"\"<p id=\"$(displayid)\" style=\"background-color:red; color:white; padding: 5px;\">nothing here</p>\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -161,13 +164,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.8",
+   "display_name": "Julia 0.3.9",
    "language": "julia",
    "name": "julia-0.3"
   },
   "language_info": {
    "name": "julia",
-   "version": "0.3.8"
+   "version": "0.3.9"
   }
  },
  "nbformat": 4,
