update to 0.4 kernel

--- a/julia/02 - Matrix Operations.ipynb
+++ b/julia/02 - Matrix Operations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
        " 12  19  22"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
        " 3  7  22"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
        "  1.4375   0.3125  -0.25"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,12 +106,14 @@
    "source": [
     "### ⋅ is the dot product operator\n",
     "\n",
-    "Type `\\cdot<Tab>` to get this operator.  You can also call it as a function using `dot(A, B)`"
+    "Type `\\cdot<Tab>` to get this operator.  You can also call it as a function using `dot(A, B)`\n",
+    "\n",
+    "In Julia 0.4, for multi-dimensional matrices, we need to use the `vecdot` function instead."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -122,13 +124,13 @@
        "3.000000000000001"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A' ⋅ (A^-1)"
+    "vecdot(A', (A^-1))"
    ]
   },
   {
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +167,7 @@
        " 3  5  7  9  11"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +201,7 @@
        " 5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +240,7 @@
        " 11"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +271,7 @@
        "true"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +293,7 @@
        "false"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -313,7 +315,7 @@
        "true"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +337,7 @@
        "false"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +367,7 @@
        " 1  2  3  4  5  3  5  7  9  11"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +398,7 @@
        " 3  5  7  9  11"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +428,7 @@
        " 4  7  10  13  16"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,20 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "dimensions must match\nwhile loading In[33], in expression starting on line 1",
+     "evalue": "LoadError: DimensionMismatch(\"dimensions must match\")\nwhile loading In[42], in expression starting on line 1",
      "output_type": "error",
      "traceback": [
-      "dimensions must match\nwhile loading In[33], in expression starting on line 1",
+      "LoadError: DimensionMismatch(\"dimensions must match\")\nwhile loading In[42], in expression starting on line 1",
       "",
-      " in promote_shape at operators.jl:200",
-      " in + at array.jl:723"
+      " in promote_shape at operators.jl:220",
+      " in + at arraymath.jl:96"
      ]
     }
    ],
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -488,7 +490,7 @@
        " 24  38  44"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -513,7 +515,7 @@
        " 14  21  24"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -544,7 +546,7 @@
        "0.9999999999999998"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,13 +567,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.8",
+   "display_name": "Julia 0.4.3",
    "language": "julia",
-   "name": "julia-0.3"
+   "name": "julia-0.4"
   },
   "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.3.8"
+   "version": "0.4.3"
   }
  },
  "nbformat": 4,
