--- a/julia/01 - JSON _ JavaScript.ipynb
+++ b/julia/01 - JSON _ JavaScript.ipynb
@@ -134,13 +134,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.8",
+   "display_name": "Julia 0.4.3",
    "language": "julia",
-   "name": "julia-0.3"
+   "name": "julia-0.4"
   },
   "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.3.8"
+   "version": "0.4.3"
   }
  },
  "nbformat": 4,
