--- a/julia/04 - JavaScript to update a Node.ipynb
+++ b/julia/04 - JavaScript to update a Node.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,10 +26,10 @@
     {
      "data": {
       "text/plain": [
-       "\"demo-node-0.976430733131741\""
+       "\"demo-node-0.09351622817787297\""
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/html": [
-       "<p id=\"demo-node-0.976430733131741\" style=\"background-color:red; color:white; padding: 5px;\">nothing here</p>"
+       "<p id=\"demo-node-0.09351622817787297\" style=\"background-color:red; color:white; padding: 5px;\">nothing here</p>"
       ]
      },
      "metadata": {},
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -89,8 +89,8 @@
      "data": {
       "text/html": [
        "<script>\n",
-       "    window[\"demo-node-0.976430733131741\"] = function(text) {\n",
-       "        var p = document.getElementById(\"demo-node-0.976430733131741\");\n",
+       "    window[\"demo-node-0.10068088673393061\"] = function(text) {\n",
+       "        var p = document.getElementById(\"demo-node-0.10068088673393061\");\n",
        "        if(p) {\n",
        "            p.innerText = text;\n",
        "        }\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +132,7 @@
     {
      "data": {
       "text/html": [
-       "<script>window[\"demo-node-0.976430733131741\"](\"hello, world\");</script>"
+       "<script>window[\"demo-node-0.10068088673393061\"](\"hello, world\");</script>"
       ]
      },
      "metadata": {},
@@ -164,13 +164,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.9",
+   "display_name": "Julia 0.4.3",
    "language": "julia",
-   "name": "julia-0.3"
+   "name": "julia-0.4"
   },
   "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.3.9"
+   "version": "0.4.3"
   }
  },
  "nbformat": 4,
