--- a/julia/05 - Include an IFrame.ipynb
+++ b/julia/05 - Include an IFrame.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -23,10 +23,10 @@
     {
      "data": {
       "text/plain": [
-       "createIFrame (generic function with 2 methods)"
+       "createIFrame (generic function with 1 method)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
        "updateIFrame (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -123,23 +123,24 @@
       "text/html": [
        "<!-- First create an empty iframe that's 500px high and has this id -->\n",
        "<iframe\n",
-       "id=\"demo-iframe-0.3593226222556669\"\n",
-       "height=\"500\"\n",
-       "style=\"border:none;\"\n",
-       "src=\"about:blank\">\n",
+       "    id=\"demo-iframe-0.8045349162625421\"\n",
+       "    height=\"500\"\n",
+       "    style=\"border:none;\"\n",
+       "    src=\"about:blank\">\n",
        "</iframe>\n",
        "\n",
        "\n",
        "<!-- Next create a JavaScript function with the same name as the node -->\n",
        "<script>\n",
-       "window[\"demo-iframe-0.3593226222556669\"] = function(url) {\n",
-       "    var iframe = document.getElementById(\"demo-iframe-0.3593226222556669\");\n",
-       "    if(iframe) {\n",
-       "        iframe.width = iframe.parentNode.offsetWidth * 0.99;\n",
-       "        iframe.src = url;\n",
-       "    }\n",
-       "};\n",
-       "</script>\n"
+       "    window[\"demo-iframe-0.8045349162625421\"] = function(url) {\n",
+       "        var iframe = document.getElementById(\"demo-iframe-0.8045349162625421\");\n",
+       "        if(iframe) {\n",
+       "            iframe.width = iframe.parentNode.offsetWidth * 0.99;\n",
+       "            iframe.src = url;\n",
+       "        }\n",
+       "    };\n",
+       "</script>\n",
+       "    "
       ]
      },
      "metadata": {},
@@ -148,7 +149,7 @@
     {
      "data": {
       "text/html": [
-       "<script>window[\"demo-iframe-0.3593226222556669\"](\"https://soasta.github.io/osbridge-julia-d3/d3/06-data-driven-bars.html\");</script>"
+       "<script>window[\"demo-iframe-0.8045349162625421\"](\"https://soasta.github.io/julia-d3-tutorial/d3/06-data-driven-bars.html\");</script>"
       ]
      },
      "metadata": {},
@@ -158,7 +159,7 @@
    "source": [
     "id = createIFrame()\n",
     "\n",
-    "updateIFrame(id, \"https://soasta.github.io/osbridge-julia-d3/d3/06-data-driven-bars.html\")"
+    "updateIFrame(id, \"https://soasta.github.io/julia-d3-tutorial/d3/06-data-driven-bars.html\")"
    ]
   },
   {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +181,7 @@
     {
      "data": {
       "text/html": [
-       "<script>window[\"demo-iframe-0.45502482604023897\"](\"https://soasta.github.io/osbridge-julia-d3/d3/05-data-driven-documents.html\");</script>"
+       "<script>window[\"demo-iframe-0.8045349162625421\"](\"https://soasta.github.io/julia-d3-tutorial/d3/05-data-driven-documents.html\");</script>"
       ]
      },
      "metadata": {},
@@ -188,7 +189,7 @@
     }
    ],
    "source": [
-    "updateIFrame(id, \"https://soasta.github.io/osbridge-julia-d3/d3/05-data-driven-documents.html\")"
+    "updateIFrame(id, \"https://soasta.github.io/julia-d3-tutorial/d3/05-data-driven-documents.html\")"
    ]
   },
   {
@@ -203,13 +204,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.9",
+   "display_name": "Julia 0.4.3",
    "language": "julia",
-   "name": "julia-0.3"
+   "name": "julia-0.4"
   },
   "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.3.9"
+   "version": "0.4.3"
   }
  },
  "nbformat": 4,
